Update GitHub token references in action.yml

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -35,8 +35,8 @@ jobs:
         uses: JayantGoel001/metrics@master
         with:
           filename: metrics.svg
-          token: ${{ secrets.GH2_TOKEN }}
-          committer_token: ${{ secrets.GH2_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
+          committer_token: ${{ secrets.GH_TOKEN }}
           base: "header, activity, community, repositories"
           plugin_introduction: yes
           plugin_introduction_title: yes
@@ -108,13 +108,13 @@ jobs:
         uses: JayantGoel001/metrics@master
         with:
           filename: metrics.detailed.svg
-          token: ${{ secrets.GH2_TOKEN }}
-          committer_token: ${{ secrets.GH2_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
+          committer_token: ${{ secrets.GH_TOKEN }}
           base: "metadata"
           plugin_gists: yes
           plugin_pagespeed: no
           plugin_pagespeed_detailed: yes
-          plugin_pagespeed_token: ${{ secrets.GH2_TOKEN }}
+          plugin_pagespeed_token: ${{ secrets.GH_TOKEN }}
           plugin_pagespeed_screenshot: yes
           plugin_pagespeed_pwa: yes
           plugin_followup: yes
